--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"></script>
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script></script>
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Umut Karadirek</h1>
-    
+
+    <div class="container-fluid">
+
+        <div class="row text-center bg-info text-info">
+            <div class="col-md bg-warning">
+                <h1>Umut Karadirek</h1>
+            </div>
+        </div>
+
+        <div class="row text-center">
+            <div class="col-md-6 height bg-warning border">
+                <p>main</p>
+            </div>
+            <div class="col-md-6 height bg-warning border">
+                <p>main</p>
+            </div>
+        </div>
+
+        <div class="row text-center">
+            <div class="col-md bg-warning border">
+                <p>Footer</p>
+            </div>
+
+        </div>
+    </div>
+
+
 </body>
+
 </html>
