--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 <body>
 
+    <a class="navbar-brand">
+        <img src="">
+    </a>
+
+    <div class="col-md-4 border">
+        <img class="rounded" src="">
+        <h1></h1>
+    </div>
+
     <div class="container-fluid">
 
         <div class="row text-center bg-info text-info">
